--- a/project4_ETL.ipynb
+++ b/project4_ETL.ipynb
@@ -3050,7 +3050,25 @@
    "source": [
     "This single file was downloaded successfully from a URL. Now let's try reading it into this code.\n",
     "\n",
-    "Many tests have not worked. For now the single file `NYCTaxi.parquet` can be used from repo [Resources](/Resources) folder."
+    "Many tests have not worked. For now the single file can be found [Resources](/Resources) folder. The file is zipped because of storage issues on github repo. \n",
+    "\n",
+    "Use the following code to extract the zipped file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "# Find zipped file, unzip it\n",
+    "zip_file_path = \"/content/parquet_file.zip\"\n",
+    "extract_to = \"./\"\n",
+    "\n",
+    "shutil.unpack_archive(zip_file_path, extract_to)\n",
+    "print(\"Extraction completed!\")"
    ]
   }
  ],
