--- a/project4_ETL.ipynb
+++ b/project4_ETL.ipynb
@@ -3070,6 +3070,44 @@
     "shutil.unpack_archive(zip_file_path, extract_to)\n",
     "print(\"Extraction completed!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Assuming parquet_df is your pandas-like DataFrame\n",
+    "\n",
+    "# Split the DataFrame into train and test sets (80% train, 20% test)\n",
+    "train_df, test_df = train_test_split(parquet_df, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Show the split counts (optional)\n",
+    "print(f\"Training rows: {len(train_df)}, Testing rows: {len(test_df)}\")\n",
+    "\n",
+    "# Save the DataFrames to CSV files\n",
+    "train_df.to_csv('new_train.csv', index=False)\n",
+    "test_df.to_csv('new_test.csv', index=False)\n",
+    "\n",
+    "print(\"CSV files saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a zip file the two large CSVs\n",
+    "train_location = \"/content/new_train.csv\"\n",
+    "test_location = \"/content/new_test.csv\"\n",
+    "\n",
+    "shutil.make_archive('/content/new_train', 'zip', train_location)\n",
+    "shutil.make_archive('/content/new_test', 'zip', test_location)"
+   ]
   }
  ],
  "metadata": {
