--- a/project4_ETL.ipynb
+++ b/project4_ETL.ipynb
@@ -3108,6 +3108,92 @@
     "shutil.make_archive('/content/new_train', 'zip', train_location)\n",
     "shutil.make_archive('/content/new_test', 'zip', test_location)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpyspark\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SparkFiles\n\u001b[0;32m      2\u001b[0m url \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhttps://project4-nyctaxi.s3.us-east-1.amazonaws.com/new_train.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 3\u001b[0m spark\u001b[38;5;241m.\u001b[39msparkContext\u001b[38;5;241m.\u001b[39maddFile(url)\n\u001b[0;32m      4\u001b[0m df \u001b[38;5;241m=\u001b[39m spark\u001b[38;5;241m.\u001b[39mread\u001b[38;5;241m.\u001b[39mcsv(SparkFiles\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnew_train.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m), sep\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m\"\u001b[39m, header\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      5\u001b[0m df\u001b[38;5;241m.\u001b[39mshow()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'spark' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from pyspark import SparkFiles\n",
+    "url = \"https://project4-nyctaxi.s3.us-east-1.amazonaws.com/new_train.csv\"\n",
+    "spark.sparkContext.addFile(url)\n",
+    "df = spark.read.csv(SparkFiles.get(\"new_train.csv\"), sep=\",\", header=True)\n",
+    "df.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# URL for the dataset\n",
+    "url = \"https://project4-nyctaxi.s3.us-east-1.amazonaws.com/new_train.csv\"\n",
+    "\n",
+    "# Load the dataset into a Pandas DataFrame\n",
+    "df = pd.read_csv(url)\n",
+    "\n",
+    "# Display the first few rows of the dataframe\n",
+    "print(df.head())\n",
+    "\n",
+    "# Extract coordinates for clustering\n",
+    "pickup_coords = df[['pickup_latitude', 'pickup_longitude']].to_numpy()\n",
+    "dropoff_coords = df[['dropoff_latitude', 'dropoff_longitude']].to_numpy()\n",
+    "\n",
+    "# K-means clustering\n",
+    "n_clusters = 3  # Number of clusters\n",
+    "kmeans_pickup = KMeans(n_clusters=n_clusters, random_state=42).fit(pickup_coords)\n",
+    "kmeans_dropoff = KMeans(n_clusters=n_clusters, random_state=42).fit(dropoff_coords)\n",
+    "\n",
+    "# Add cluster labels back to the dataframe\n",
+    "df['pickup_cluster'] = kmeans_pickup.labels_\n",
+    "df['dropoff_cluster'] = kmeans_dropoff.labels_\n",
+    "\n",
+    "# Visualize the clusters\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "# Plot pickup clusters\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.scatter(pickup_coords[:, 0], pickup_coords[:, 1], c=kmeans_pickup.labels_, cmap='viridis', s=50)\n",
+    "plt.scatter(kmeans_pickup.cluster_centers_[:, 0], kmeans_pickup.cluster_centers_[:, 1], color='red', marker='x', s=200)\n",
+    "plt.title('Pickup Location Clusters')\n",
+    "plt.xlabel('Latitude')\n",
+    "plt.ylabel('Longitude')\n",
+    "\n",
+    "# Plot dropoff clusters\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter(dropoff_coords[:, 0], dropoff_coords[:, 1], c=kmeans_dropoff.labels_, cmap='viridis', s=50)\n",
+    "plt.scatter(kmeans_dropoff.cluster_centers_[:, 0], kmeans_dropoff.cluster_centers_[:, 1], color='red', marker='x', s=200)\n",
+    "plt.title('Dropoff Location Clusters')\n",
+    "plt.xlabel('Latitude')\n",
+    "plt.ylabel('Longitude')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -3115,11 +3201,21 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
