Citation of visual and nn_model dependencies adjusted

--- a/nn_model/nn_model_stage1.ipynb
+++ b/nn_model/nn_model_stage1.ipynb
@@ -11,7 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -152,8 +169,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# URL of the CSV file\n",
     "url = 'https://project4-nyctaxi.s3.us-east-1.amazonaws.com/train.csv'\n",
     "\n",
@@ -473,15 +488,6 @@
    "metadata": {},
    "source": [
     "We've created more scalable columns: hour, day of the week, month, day of the year, and weekend. Now we need to handle to eact time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -866,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1012,8 +1018,6 @@
     }
    ],
    "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
     "# Stack coordinates for clustering\n",
     "coords = np.vstack((df[['pickup_latitude', 'pickup_longitude']].values,\n",
     "                    df[['dropoff_latitude', 'dropoff_longitude']].values))\n",
@@ -2602,19 +2606,6 @@
    "metadata": {},
    "source": [
     "OK, now we can start split, test, train and scale"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import our dependencies\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import tensorflow as tf"
    ]
   },
   {
