--- a/nn_model/nn_model_stage2.ipynb
+++ b/nn_model/nn_model_stage2.ipynb
@@ -4,12 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas starter file: the CSV is large and spark might be faster. It is possible to read using pandas and do machine learning here instead. Reading the CSV to pandas on my computer took: 5 minutes and 25s. It might speed it up to download the file manually."
+    "## nn_model_stage2\n",
+    "\n",
+    "Quick optimization of initial proof of concept tests."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import dependencies\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -150,8 +171,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "# URL of the CSV file\n",
     "url = 'https://project4-nyctaxi.s3.us-east-1.amazonaws.com/train.csv'\n",
     "\n",
@@ -471,15 +490,6 @@
    "metadata": {},
    "source": [
     "We've created more scalable columns: hour, day of the week, month, day of the year, and weekend. Now we need to handle to eact time."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
    ]
   },
   {
@@ -864,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1010,8 +1020,6 @@
     }
    ],
    "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
     "# Stack coordinates for clustering\n",
     "coords = np.vstack((df[['pickup_latitude', 'pickup_longitude']].values,\n",
     "                    df[['dropoff_latitude', 'dropoff_longitude']].values))\n",
@@ -2531,7 +2539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -33624,8 +33632,6 @@
     }
    ],
    "source": [
-    "import plotly.express as px\n",
-    "\n",
     "# Assuming your 'df' DataFrame has a 'trip_duration' column\n",
     "Q1 = df['trip_duration'].quantile(0.25)\n",
     "Q3 = df['trip_duration'].quantile(0.75)\n",
@@ -33885,19 +33891,6 @@
    "metadata": {},
    "source": [
     "OK, now we can start split, test, train and scale"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 143,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import our dependencies\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "import tensorflow as tf"
    ]
   },
   {
@@ -34212,15 +34205,6 @@
     "\n",
     "print(f\"Test MAE (in original scale): {mae}\")\n",
     "print(f\"Test MSE (in original scale): {mse}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This means that the model is about 565 seconds (over 9 minutes) off. It's not very precise. Outliers might be effecting this. Let's look at some ways to optimize this model. A MinMaxScaler could be used on `trip_duration` to help the learning avoid outliers. A different loss function, like Huber loss, might be less sensitive to outliers than MAE.\n",
-    "\n",
-    "Start a new file called `nn_model_optimization` to experiment with some of these ideas."
    ]
   },
   {
