Adjusted nn_model_optimization_full dependencies

--- a/nn_model/nn_model_stage1.ipynb
+++ b/nn_model/nn_model_stage1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## nn_model_stage1\n",
     "\n",
-    "Initial proof of concept tests."
+    "Initial proof of concept tests, using pandas on local machine."
    ]
   },
   {
