--- a/nn_model/nn_model_stage2.ipynb
+++ b/nn_model/nn_model_stage2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## nn_model_stage2\n",
     "\n",
-    "Quick optimization of initial proof of concept tests."
+    "Quick optimization of initial proof of concept tests, using pandas on a local machine."
    ]
   },
   {
